# invoke-common-tasks

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: publish.yaml  test.yaml
invoke_common_tasks/: __init__.py  tasks.py
invoke_common_tasks/utils/: config.py  git.py  poetry.py
tests/: test_basic.py
