[tool.poetry]
name = "invoke-common-tasks"
version = "0.2.2"
description = "Some common tasks for PyInvoke to bootstrap your code quality and testing workflows."
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/neozenith/invoke-common-tasks"
repository = "https://github.com/neozenith/invoke-common-tasks"


[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
types-invoke = "^1.6.2"
poetry-core = "^1.0.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"
mypy = "^0.941"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes --cov=. --no-cov-on-fail"

[tool.coverage.run]
omit = ["tests/*", "**/__init__.py", "tasks.py"]
branch = true

[tool.mypy]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
exclude = [
  'tests/',
  'tasks\.py'
]
follow_imports = 'silent'
# Work your way up to these:
disallow_incomplete_defs = true
disallow_untyped_defs = true
# strict = true



