[tool.poetry]
name = "invoke-common-tasks"
version = "0.3.0b1"
description = "Some common tasks for PyInvoke to bootstrap your code quality and testing workflows."
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/neozenith/invoke-common-tasks"
repository = "https://github.com/neozenith/invoke-common-tasks"


[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
types-invoke = "^1.6.2"
poetry-core = "^1.0.8"
black = {version = "^22.1.0", optional = true}
isort = {version = "^5.10.1", optional = true}
flake8 = {version = "^4.0.1", optional = true}
flake8-docstrings = {version = "^1.6.0", optional = true}
mypy = {version = "^0.942", optional = true}
pytest = {version = "^7.1.1", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
coverage = {extras = ["toml"], version = "^6.3.2", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
format = ["black", "isort"]
lint = ["flake8", "flake8-docstrings"]
typecheck = ["mypy"]
test = ["pytest", "pytest-cov", "coverage"]
all = ["black", "isort", "flake8", "flake8-docstrings", "mypy", "pytest", "pytest-cov", "coverage"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.mypy]
exclude = ["tests/", "tasks\\.py"]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "silent"
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes --cov=. --no-cov-on-fail"

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py", "tasks.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

